WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45574
Pseudostyle resolution corrupts cached child index values
https://bugs.webkit.org/show_bug.cgi?id=45574
Summary
Pseudostyle resolution corrupts cached child index values
mitz
Reported
2010-09-10 16:28:55 PDT
Pseudostyle resolution corrupts cached child index values
Attachments
Patch
(5.38 KB, patch)
2010-09-10 16:53 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-09-10 16:53:23 PDT
Created
attachment 67264
[details]
Patch
mitz
Comment 2
2010-09-10 17:53:28 PDT
Committed
r67255
: <
http://trac.webkit.org/changeset/67255
>
WebKit Review Bot
Comment 3
2010-09-10 19:15:30 PDT
http://trac.webkit.org/changeset/67255
might have broken Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/67253
http://trac.webkit.org/changeset/67254
http://trac.webkit.org/changeset/67255
chris fleizach
Comment 4
2010-09-10 19:17:44 PDT
It might be beneficial to ASSERT after getCachedPseudoStyle() is called in these two cases, in case there are other scenarios.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug