WebCore/rendering/RenderBlock.cpp
@@ -5168,10 +5168,6 @@ void RenderBlock::updateFirstLetter()
         // Create our pseudo style now that we have our firstLetterContainer determined.
         RenderStyle* pseudoStyle = firstLetterBlock->getCachedPseudoStyle(FIRST_LETTER,
                                                                           firstLetterContainer->firstLineStyle());
-        if (!pseudoStyle) {
-            view()->enableLayoutState();
-            return;
-        }        
 
         // Force inline display (except for floating first-letters)
         pseudoStyle->setDisplay(pseudoStyle->isFloating() ? BLOCK : INLINE);
